force-app/main/default/objects/Account/fields/GH_pkl_Subestado_de_Reactivacion__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Subestado_de_Reactivacion__c</fullName>
    <label>Subestado de Reactivación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reactivación Aceptada</fullName>
                <label>✔️ Reactivación Aceptada</label>
            </value>
            <value>
                <fullName>Reactivación Rechazada</fullName>
                <label>❌ Reactivación Rechazada</label>
            </value>
            <value>
                <fullName>Reactivación Solicitada</fullName>
                <label>❔Reactivación Solicitada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>