force-app/main/default/objects/Account/fields/GH_pkl_TipoConsultorio__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_TipoConsultorio__c</fullName>
    <description>para credencialización, tipo de consultorio</description>
    <label>Tipo de Consultorio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tipo 1</fullName>
            </value>
            <value>
                <fullName>PROPIO</fullName>
            </value>
            <value>
                <fullName>ARRENDADO MAC</fullName>
            </value>
            <value>
                <fullName>SUBARRENDADO</fullName>
            </value>
            <value>
                <fullName>COMPARTIDO</fullName>
            </value>
            <value>
                <fullName>EXTERNO</fullName>
            </value>
            <value>
                <fullName>BENEFICIO SIN COBRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>