force-app/main/default/objects/Account/fields/GH_pkl_UnidadSede__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_UnidadSede__c</fullName>
    <label>Unidad Sede</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veracruz</fullName>
            </value>
            <value>
                <fullName>MediMAC Mérida</fullName>
            </value>
            <value>
                <fullName>Puebla</fullName>
            </value>
            <value>
                <fullName>Guadalajara</fullName>
            </value>
            <value>
                <fullName>Mexicali</fullName>
            </value>
            <value>
                <fullName>MediMAC Cuemanco</fullName>
            </value>
            <value>
                <fullName>Celaya</fullName>
            </value>
            <value>
                <fullName>Querétaro</fullName>
            </value>
            <value>
                <fullName>León</fullName>
            </value>
            <value>
                <fullName>MediMAC Guanajuato</fullName>
            </value>
            <value>
                <fullName>Irapuato</fullName>
            </value>
            <value>
                <fullName>San Miguel</fullName>
            </value>
            <value>
                <fullName>Los Cabos</fullName>
            </value>
            <value>
                <fullName>La Viga</fullName>
            </value>
            <value>
                <fullName>Los Mochis</fullName>
            </value>
            <value>
                <fullName>Tampico</fullName>
            </value>
            <value>
                <fullName>Aguascalientes Norte</fullName>
            </value>
            <value>
                <fullName>Aguascalientes Sur</fullName>
            </value>
            <value>
                <fullName>MediMAC Tlalnepantla</fullName>
            </value>
            <value>
                <fullName>MediMAC Ecatepec</fullName>
            </value>
            <value>
                <fullName>MediMAC Boca del Río</fullName>
            </value>
            <value>
                <fullName>San Miguel de Allende</fullName>
            </value>
            <value>
                <fullName>Periférico Sur</fullName>
            </value>
            <value>
                <fullName>Interlomas</fullName>
                <isActive>false</isActive>
                <label>Interlomas</label>
            </value>
            <value>
                <fullName>MediMAC Interlomas</fullName>
                <isActive>false</isActive>
                <label>MediMAC Interlomas</label>
            </value>
            <value>
                <fullName>MediMAC Tijuana</fullName>
                <isActive>false</isActive>
                <label>MediMAC Tijuana</label>
            </value>
            <value>
                <fullName>Perisur</fullName>
                <isActive>false</isActive>
                <label>Perisur</label>
            </value>
            <value>
                <fullName>Santa Fe</fullName>
                <isActive>false</isActive>
                <label>Santa Fe</label>
            </value>
            <value>
                <fullName>Tijuana</fullName>
                <isActive>false</isActive>
                <label>Tijuana</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>