force-app/main/default/objects/Account/fields/GH_pkl_ValidacionPorDirectorMedico__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_ValidacionPorDirectorMedico__c</fullName>
    <description>Campo para credencialización</description>
    <label>Validación por Director Médico</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>