force-app/main/default/objects/Account/fields/GH_pkl_Verific_Cedula_Fue_Ori_Med_Gral__c.field-meta.xml
<CustomField>
    <fullName>GH_pkl_Verific_Cedula_Fue_Ori_Med_Gral__c</fullName>
    <description>Campo de Credencialización Verificación de Cédula en Fuente Original Médico General</description>
    <inlineHelpText>Verificación de Cédula en Fuente Original Médico General</inlineHelpText>
    <label>Verificación Cédula en Fuente Original</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
                <label>✔️ SI</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>❌ NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>