force-app/main/default/objects/Account/fields/GH_quiere_la_baja__c.field-meta.xml
<CustomField>
    <fullName>GH_quiere_la_baja__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para activar el Approval Process de &quot;Solicitud de baja&quot;</description>
    <label>Quiere la baja</label>
    <type>Checkbox</type>
</CustomField>