force-app/main/default/objects/Account/fields/GH_rus_Ultima_actualizacion_Esp__c.field-meta.xml
<CustomField>
    <fullName>GH_rus_Ultima_actualizacion_Esp__c</fullName>
    <description>Campo que ayuda a actualizar la cuenta cuando se crea una especialidad completa</description>
    <label>Ultima actualización de Especialidades</label>
    <summarizedField>GH_Especialidad__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>GH_Especialidad__c.GH_Master_Cuenta__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>