force-app/main/default/objects/Account/fields/GH_txa_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>GH_txa_Comentarios__c</fullName>
    <description>Campo para credencialización</description>
    <label>Comentarios</label>
    <type>TextArea</type>
</CustomField>