force-app/main/default/objects/Account/fields/GH_txa_Comentarios_de_Baja_Rechazado__c.field-meta.xml
<CustomField>
    <fullName>GH_txa_Comentarios_de_Baja_Rechazado__c</fullName>
    <label>Comentarios de Baja Rechazado</label>
    <type>TextArea</type>
</CustomField>