force-app/main/default/objects/Account/fields/GH_txa_Comentarios_de_React_Rechazada__c.field-meta.xml
<CustomField>
    <fullName>GH_txa_Comentarios_de_React_Rechazada__c</fullName>
    <label>Comentarios de Reactivación Rechazada</label>
    <type>TextArea</type>
</CustomField>