force-app/main/default/objects/Account/fields/GH_txt_AseguradorasConLasQueTrabaja__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_AseguradorasConLasQueTrabaja__c</fullName>
    <label>Aseguradoras con las que trabaja</label>
    <length>50</length>
    <type>Text</type>
</CustomField>