force-app/main/default/objects/Account/fields/GH_txt_Asistente__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_Asistente__c</fullName>
    <label>Asistente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>