force-app/main/default/objects/Account/fields/GH_txt_Cedula_Profesional_Med_Gen__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_Cedula_Profesional_Med_Gen__c</fullName>
    <description>Campo de Credencialización</description>
    <label>Cédula Profesional Médico General</label>
    <length>8</length>
    <type>Text</type>
</CustomField>