force-app/main/default/objects/Account/fields/GH_txt_Consultorio__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_Consultorio__c</fullName>
    <description>para credencialización, número de consultorio</description>
    <label>Consultorio en caso de aplicar</label>
    <length>30</length>
    <type>Text</type>
</CustomField>