force-app/main/default/objects/Account/fields/GH_txt_ConsultorioMac__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_ConsultorioMac__c</fullName>
    <description>Nro de Consultorio (en caso de aplicar)</description>
    <inlineHelpText>Nro de Consultorio (en caso de aplicar)</inlineHelpText>
    <label>Nro de Consultorio Mac</label>
    <length>30</length>
    <type>Text</type>
</CustomField>