force-app/main/default/objects/Account/fields/GH_txt_CuentaClabe__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_CuentaClabe__c</fullName>
    <description>Campo de credencialización</description>
    <label>Cuenta CLABE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>