force-app/main/default/objects/Account/fields/GH_txt_CURP__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_CURP__c</fullName>
    <description>Campo de Credencialización</description>
    <label>CURP</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>