force-app/main/default/objects/Account/fields/GH_TXT_Documentacion_Respaldatoria_Baja__c.field-meta.xml
<CustomField>
    <fullName>GH_TXT_Documentacion_Respaldatoria_Baja__c</fullName>
    <label>Documentacion Respaldatoria Baja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>