force-app/main/default/objects/Account/fields/GH_txt_Extension__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_Extension__c</fullName>
    <description>para credencialización, extensión telefónica</description>
    <label>Extensión</label>
    <length>5</length>
    <type>Text</type>
</CustomField>