force-app/main/default/objects/Account/fields/GH_txt_ExtensionMac__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_ExtensionMac__c</fullName>
    <description>Extensión Mac</description>
    <inlineHelpText>Extensión Mac</inlineHelpText>
    <label>Extensión Mac</label>
    <length>5</length>
    <type>Text</type>
</CustomField>