force-app/main/default/objects/Account/fields/GH_txt_HorarioDeConsulta__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_HorarioDeConsulta__c</fullName>
    <label>Horario de consulta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>