force-app/main/default/objects/Account/fields/GH_txt_ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_ID_ERP__c</fullName>
    <description>Campo creado para Credencialización</description>
    <inlineHelpText>ID SAP/TASY/SAH/SIHO</inlineHelpText>
    <label>ID ERP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>