force-app/main/default/objects/Account/fields/GH_txt_Justificacion_reactivacion__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_Justificacion_reactivacion__c</fullName>
    <label>Justificación de reactivación</label>
    <type>TextArea</type>
</CustomField>