force-app/main/default/objects/Account/fields/GH_TXT_Justificar_Reinicio_Credencial__c.field-meta.xml
<CustomField>
    <fullName>GH_TXT_Justificar_Reinicio_Credencial__c</fullName>
    <label>Justificación Reinicio Credencialización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>