force-app/main/default/objects/Account/fields/GH_txt_Motivo_de_Reiniciar_Credencial__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_Motivo_de_Reiniciar_Credencial__c</fullName>
    <description>Motivo de Reiniciar Credencialización</description>
    <label>Motivo de Reiniciar Credencialización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>