force-app/main/default/objects/Account/fields/GH_txt_Num_Poliza_Seguro_Resp_Civil__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_Num_Poliza_Seguro_Resp_Civil__c</fullName>
    <description>Número de póliza de seguro de responsabilidad civil</description>
    <inlineHelpText>Número de póliza de seguro de responsabilidad civil</inlineHelpText>
    <label>Núm. Póliza de Seguro Resp. Civil</label>
    <length>20</length>
    <type>Text</type>
</CustomField>