force-app/main/default/objects/Account/fields/GH_txt_OtrosHospitalesDondeTrabaja__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_OtrosHospitalesDondeTrabaja__c</fullName>
    <label>Otros hospitales donde trabaja</label>
    <length>50</length>
    <type>Text</type>
</CustomField>