force-app/main/default/objects/Account/fields/GH_txt_ProcedimientoInsignia__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_ProcedimientoInsignia__c</fullName>
    <label>Procedimiento insignia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>