force-app/main/default/objects/Account/fields/GH_txt_Puesto__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_Puesto__c</fullName>
    <label>Puesto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>