force-app/main/default/objects/Account/fields/GH_txt_RFC__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_RFC__c</fullName>
    <description>Campo de Credencialización</description>
    <label>RFC (Constancia fiscal)</label>
    <length>13</length>
    <type>Text</type>
</CustomField>