force-app/main/default/objects/Account/fields/GH_txt_Titulo_Licenciatura__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_Titulo_Licenciatura__c</fullName>
    <description>Campo de Credencialización</description>
    <label>Título Licenciatura</label>
    <length>40</length>
    <type>Text</type>
</CustomField>