force-app/main/default/objects/Account/fields/GH_txt_TorreConsultorio__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_TorreConsultorio__c</fullName>
    <description>para credencialización, torre en la que está el consultorio en la UH</description>
    <label>Torre de Consultorio en Caso de Aplicar</label>
    <length>30</length>
    <type>Text</type>
</CustomField>