force-app/main/default/objects/Account/fields/GH_txt_TorreConsultorioMac__c.field-meta.xml
<CustomField>
    <fullName>GH_txt_TorreConsultorioMac__c</fullName>
    <description>Torre de consultorio Mac</description>
    <inlineHelpText>Torre de consultorio Mac</inlineHelpText>
    <label>Torre de consultorio Mac</label>
    <length>30</length>
    <type>Text</type>
</CustomField>