force-app/main/default/objects/Account/fields/GH_url_AdjuntoAvisoFuncionamiento__c.field-meta.xml
<CustomField>
    <fullName>GH_url_AdjuntoAvisoFuncionamiento__c</fullName>
    <description>Adjunto aviso funcionamiento</description>
    <inlineHelpText>Adjunto aviso funcionamiento</inlineHelpText>
    <label>Adjunto aviso funcionamiento</label>
    <type>Url</type>
</CustomField>