force-app/main/default/objects/Account/fields/GH_url_AdjuntoAvisoPrivacidad__c.field-meta.xml
<CustomField>
    <fullName>GH_url_AdjuntoAvisoPrivacidad__c</fullName>
    <description>Para credencialización</description>
    <label>Adjunto Aviso de Privacidad</label>
    <type>Url</type>
</CustomField>