force-app/main/default/objects/Account/fields/GH_url_AdjuntoComprobanteDomicilio__c.field-meta.xml
<CustomField>
    <fullName>GH_url_AdjuntoComprobanteDomicilio__c</fullName>
    <description>Para credencialización</description>
    <label>Adjunto Comprobante de Domicilio</label>
    <type>Url</type>
</CustomField>