force-app/main/default/objects/Account/fields/GH_url_AdjuntoINE__c.field-meta.xml
<CustomField>
    <fullName>GH_url_AdjuntoINE__c</fullName>
    <description>Adjunto INE</description>
    <inlineHelpText>Adjunto INE</inlineHelpText>
    <label>Adjunto INE</label>
    <type>Url</type>
</CustomField>