force-app/main/default/objects/Account/fields/GH_url_AdjuntoLicenciatura__c.field-meta.xml
<CustomField>
    <fullName>GH_url_AdjuntoLicenciatura__c</fullName>
    <description>Campo para credencialización</description>
    <label>Adjunto Licenciatura</label>
    <type>Url</type>
</CustomField>