force-app/main/default/objects/Account/fields/GH_url_AdjuntoOtrosDiplomasyEstudios__c.field-meta.xml
<CustomField>
    <fullName>GH_url_AdjuntoOtrosDiplomasyEstudios__c</fullName>
    <description>Para credencialización</description>
    <label>Adjunto otros Diplomas y Estudios</label>
    <type>Url</type>
</CustomField>