force-app/main/default/objects/Account/fields/GH_url_AdjuntoPoliza__c.field-meta.xml
<CustomField>
    <fullName>GH_url_AdjuntoPoliza__c</fullName>
    <description>Para credencialización</description>
    <label>Adjunto Póliza</label>
    <type>Url</type>
</CustomField>