force-app/main/default/objects/Account/fields/GH_url_AdjuntoSolCredencializacion__c.field-meta.xml
<CustomField>
    <fullName>GH_url_AdjuntoSolCredencializacion__c</fullName>
    <description>Para credencialización</description>
    <label>Adjunto Solicitud de Credencialización</label>
    <type>Url</type>
</CustomField>