force-app/main/default/objects/Account/fields/GH_url_AdjuntoVerificacionCedulaGeneral__c.field-meta.xml
<CustomField>
    <fullName>GH_url_AdjuntoVerificacionCedulaGeneral__c</fullName>
    <description>Campo para credencialización.</description>
    <label>Adjunto Verificación cédula general</label>
    <type>Url</type>
</CustomField>