force-app/main/default/objects/Account/fields/Numero_de_Aprobaciones__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Aprobaciones__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Numero de Aprobaciones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>