force-app/main/default/objects/Account/fields/SBQQ__ContractCoTermination__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ContractCoTermination__c</fullName>
    <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
    <inlineHelpText>Determina el modo en que los contratos de servicios y suscripciones terminan de forma compartida para este cliente.</inlineHelpText>
    <label>Contract Co-Termination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
                <default>true</default>
                <label>Never</label>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Prompt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>