force-app/main/default/objects/Account/fields/SBQQ__CoTermedContractsCombined__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
    <inlineHelpText>Active esta opción para combinar activos y suscripciones de múltiples contratos con plazos compartidos. Cada contrato con plazos compartidos genera de forma predeterminada un grupo separado en el presupuesto de renovación.</inlineHelpText>
    <label>Combine Co-Termed Contracts</label>
    <type>Checkbox</type>
</CustomField>