force-app/main/default/objects/Account/fields/SBQQ__DefaultOpportunity__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DefaultOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
    <inlineHelpText>Oportunidad predeterminada para esta cuenta empleada en un módulo de comercio electrónico para obtener la lista de precios del cliente y asociarla con presupuestos de &quot;carrito de la compra&quot;.</inlineHelpText>
    <label>Default Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>WebAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>