force-app/main/default/objects/Account/fields/SBQQ__PreserveBundle__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PreserveBundle__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
    <inlineHelpText>Seleccione la casilla de verificación para mantener la jerarquía del paquete en presupuestos de renovación y correcciones.</inlineHelpText>
    <label>Preserve Bundle Structure</label>
    <type>Checkbox</type>
</CustomField>