force-app/main/default/objects/Account/fields/SBQQ__RenewalModel__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalModel__c</fullName>
    <description>The option to distinguish between Subscription or Asset based renewal.</description>
    <inlineHelpText>Seleccione Basado en activos para hacer que las renovaciones se basen en los activos de una cuenta o seleccione Basado en contratos para hacer que las renovaciones se basen en los contratos creados desde un presupuesto.</inlineHelpText>
    <label>Renewal Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Based</fullName>
            </value>
            <value>
                <fullName>Contract Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>