force-app/main/default/objects/Account/fields/SBQQ__RenewalPricingMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__RenewalPricingMethod__c</fullName>
    <description>Method for pricing products on renewal.</description>
    <inlineHelpText>Utilice &quot;Igual&quot; para mantener el mismo precio pagado la última vez. Utilice &quot;Lista&quot; para utilizar el precio de lista actual. Utilice &quot;Incremento&quot; para utilizar el precio pagado la última vez más un incremento.</inlineHelpText>
    <label>Renewal Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same</fullName>
                <default>true</default>
                <label>Same</label>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Uplift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>