force-app/main/default/objects/Account/fields/Test_avance_permanente__c.field-meta.xml
<CustomField>
    <fullName>Test_avance_permanente__c</fullName>
    <formula>IF( (!ISBLANK(FirstName) &amp;&amp; !ISBLANK(GH_txt_CURP__c) &amp;&amp; ISPICKVAL(GH_pkl_INE__c,&quot;SI&quot;) &amp;&amp; !ISBLANK(GH_txt_Titulo_Licenciatura__c) &amp;&amp; 
 !ISBLANK(GH_txt_Cedula_Profesional_Med_Gen__c)) &amp;&amp; ISPICKVAL(GH_pkl_Verific_Cedula_Fue_Ori_Med_Gral__c,&quot;SI&quot;) &amp;&amp; 
 ISPICKVAL(GH_pkl_Verific_Cedula_Fue_Ori_Med_Gral__c,&quot;SI&quot;) &amp;&amp; !ISBLANK(GH_txt_Num_Poliza_Seguro_Resp_Civil__c) 
 &amp;&amp; GH_ccy_Monto_Poliza_Seguro_Resp_Civil__c &gt; 0 &amp;&amp; GH_dte_Vigencia_Poliza_Seguro_Resp__c &gt; TODAY() &amp;&amp; !ISBLANK(GH_phn_TelefonoCelular__c)
,100/100,
0		
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test_avance_permanente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>