force-app/main/default/objects/Account/recordTypes/GH_Acc_Aseguradora.recordType-meta.xml
<RecordType>
    <fullName>GH_Acc_Aseguradora</fullName>
    <active>true</active>
    <description>RecordType para crendencialización</description>
    <label>Aseguradora</label>
</RecordType>