force-app/main/default/objects/Account/recordTypes/GH_Acc_Empresa.recordType-meta.xml
<RecordType>
    <fullName>GH_Acc_Empresa</fullName>
    <active>true</active>
    <label>Empresa</label>
</RecordType>