force-app/main/default/objects/Account/validationRules/GH_2PermitirEditarPrivilegiosCompIncomp2.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_2PermitirEditarPrivilegiosCompIncomp2</fullName>
    <active>false</active>
    <description>No permitir editar campos cuando el estado es Privilegios completos o incompletos; solo si el perfil es Vinculación Médica - UH o Vinculación Médica - Corp</description>
    <errorConditionFormula>OR(
 AND(
				NOT(ISCHANGED(GH_pkl_Estatus__c)),
				ISPICKVAL(GH_pkl_Estatus__c, &quot;Privilegios Completo o Incompleto&quot;)),

AND(ISCHANGED(GH_pkl_Estatus__c),
				ISPICKVAL(PRIORVALUE(GH_pkl_Estatus__c),&quot;Privilegios Completo o Incompleto&quot;))

)</errorConditionFormula>
    <errorMessage>El Estado actual  de &apos;Privilegios Completo o Incompleto&apos; del médico no permite actualizar ningún campo.</errorMessage>
</ValidationRule>