force-app/main/default/objects/Account/validationRules/GH_AdjuntoCedulaProfesionalMedica.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_AdjuntoCedulaProfesionalMedica</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(GH_txt_Cedula_Profesional_Med_Gen__c)) &amp;&amp; ISBLANK( GH_url_AdjuntoCedulaProfesionalMedica__c )</errorConditionFormula>
    <errorDisplayField>GH_url_AdjuntoCedulaProfesionalMedica__c</errorDisplayField>
    <errorMessage>Campo Obligatorio</errorMessage>
</ValidationRule>