force-app/main/default/objects/Account/validationRules/GH_AdjuntoCV.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_AdjuntoCV</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(GH_pkl_CV__c, &apos;SI&apos;) &amp;&amp; ISBLANK( GH_url_AdjuntoCV__c )</errorConditionFormula>
    <errorDisplayField>GH_url_AdjuntoCV__c</errorDisplayField>
    <errorMessage>Campo Obligatorio</errorMessage>
</ValidationRule>