force-app/main/default/objects/Account/validationRules/GH_AdjuntoINE.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_AdjuntoINE</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(GH_pkl_INE__c, &apos;SI&apos;) &amp;&amp; ISBLANK( GH_url_AdjuntoINE__c )</errorConditionFormula>
    <errorDisplayField>GH_url_AdjuntoINE__c</errorDisplayField>
    <errorMessage>Campo Obligatorio</errorMessage>
</ValidationRule>