force-app/main/default/objects/Account/validationRules/GH_AdjuntoLicenciatura.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_AdjuntoLicenciatura</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(GH_pkl_Titulo_Licenciatura__c, &apos;SI&apos;) &amp;&amp; ISBLANK( GH_url_AdjuntoLicenciatura__c )</errorConditionFormula>
    <errorDisplayField>GH_url_AdjuntoLicenciatura__c</errorDisplayField>
    <errorMessage>Campo Obligatorio</errorMessage>
</ValidationRule>