force-app/main/default/objects/Account/validationRules/GH_AdjuntoOtrosDiplomasyEstudios.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_AdjuntoOtrosDiplomasyEstudios</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(GH_pkl_Otros_diplomas_y_estudios__c, &apos;SI&apos;) &amp;&amp; ISBLANK( GH_url_AdjuntoOtrosDiplomasyEstudios__c )</errorConditionFormula>
    <errorDisplayField>GH_url_AdjuntoOtrosDiplomasyEstudios__c</errorDisplayField>
    <errorMessage>Campo Obligatorio</errorMessage>
</ValidationRule>