force-app/main/default/objects/Account/validationRules/GH_AdjuntoPoliza.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_AdjuntoPoliza</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(GH_txt_Num_Poliza_Seguro_Resp_Civil__c)) &amp;&amp; ISBLANK( GH_url_AdjuntoPoliza__c )</errorConditionFormula>
    <errorDisplayField>GH_url_AdjuntoPoliza__c</errorDisplayField>
    <errorMessage>Campo Obligatorio</errorMessage>
</ValidationRule>