force-app/main/default/objects/Account/validationRules/GH_AdjuntoSolCredencializacion.validationRule-meta.xml
<ValidationRule>
    <fullName>GH_AdjuntoSolCredencializacion</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(GH_pkl_Solicitud_de_Credencializacion__c, &apos;SI&apos;) &amp;&amp; ISBLANK( GH_url_AdjuntoSolCredencializacion__c )</errorConditionFormula>
    <errorDisplayField>GH_url_AdjuntoSolCredencializacion__c</errorDisplayField>
    <errorMessage>Campo Obligatorio</errorMessage>
</ValidationRule>